error_universidad.txt
./Tarea_3/Universidad.java:13: warning: A refining statement is required for statement specifications
        //@ requires curso != null;
            ^
./Tarea_3/Universidad.java:26: warning: A refining statement is required for statement specifications
        //@ requires carnet > 0 ;
            ^
./Tarea_3/Universidad.java:40: warning: A refining statement is required for statement specifications
        //@ requires curso != null;
            ^
./Tarea_3/Universidad.java:58: warning: A refining statement is required for statement specifications
        //@ requires curso != null;
            ^
./Tarea_3/Universidad.java:83: warning: A refining statement is required for statement specifications
        //@ requires curso != null;
            ^
./Tarea_3/Universidad.java:7: error: cannot find symbol
        Estudiantes estudiante = new Estudiantes(nombre,carnet,cursos);
        ^
  symbol:   class Estudiantes
  location: class Universidad
./Tarea_3/Universidad.java:7: error: cannot find symbol
        Estudiantes estudiante = new Estudiantes(nombre,carnet,cursos);
                                     ^
  symbol:   class Estudiantes
  location: class Universidad
./Tarea_3/Universidad.java:8: error: cannot find symbol
        Estudiantes.getEstudiantesCarnets().put(carnet, estudiante);
        ^
  symbol:   variable Estudiantes
  location: class Universidad
./Tarea_3/Universidad.java:21: error: cannot find symbol
        Estudiantes.getEstudiantesCarnets().get(carnet).addCurso(curso);
        ^
  symbol:   variable Estudiantes
  location: class Universidad
./Tarea_3/Universidad.java:30: error: cannot find symbol
        else if(Estudiantes.getEstudiantesCarnets().containsKey(carnet)==false){
                ^
  symbol:   variable Estudiantes
  location: class Universidad
./Tarea_3/Universidad.java:34: error: cannot find symbol
            System.out.println("El estudiante "+ Estudiantes.getEstudiantesCarnets().get(carnet).getNombre() + " esta inscrito en los siguientes cursos: " + Estudiantes.getEstudiantesCarnets().get(carnet).getCursos());
                                                 ^
  symbol:   variable Estudiantes
  location: class Universidad
./Tarea_3/Universidad.java:34: error: cannot find symbol
            System.out.println("El estudiante "+ Estudiantes.getEstudiantesCarnets().get(carnet).getNombre() + " esta inscrito en los siguientes cursos: " + Estudiantes.getEstudiantesCarnets().get(carnet).getCursos());
                                                                                                                                                             ^
  symbol:   variable Estudiantes
  location: class Universidad
./Tarea_3/Universidad.java:48: error: cannot find symbol
        else if(Estudiantes.getEstudiantesCarnets().get(carnet).getCursos().contains(curso)){
                ^
  symbol:   variable Estudiantes
  location: class Universidad
./Tarea_3/Universidad.java:49: error: cannot find symbol
            System.out.println("El estudiante " + Estudiantes.getEstudiantesCarnets().get(carnet).getNombre() + " sí está inscrito en " + curso);
                                                  ^
  symbol:   variable Estudiantes
  location: class Universidad
./Tarea_3/Universidad.java:52: error: cannot find symbol
            throw new IllegalArgumentException("El estudiante " + Estudiantes.getEstudiantesCarnets().get(carnet).getNombre() + " no esta inscrito en " + curso);
                                                                  ^
  symbol:   variable Estudiantes
  location: class Universidad
./Tarea_3/Universidad.java:64: error: cannot find symbol
        for(Estudiantes estudiante: Estudiantes.getEstudiantesCarnets().values()){
                                    ^
  symbol:   variable Estudiantes
  location: class Universidad
./Tarea_3/Universidad.java:64: error: cannot find symbol
        for(Estudiantes estudiante: Estudiantes.getEstudiantesCarnets().values()){
            ^
  symbol:   class Estudiantes
  location: class Universidad
./Tarea_3/Universidad.java:84: error: cannot find symbol
        //@ ensures curso == (\sum Estudiantes estudiante; Estudiantes.getEstudiantesCarnets().values() ; 1);
                                   ^
  symbol:   class Estudiantes
  location: class Universidad
./Tarea_3/Universidad.java:84: error: cannot find symbol
        //@ ensures curso == (\sum Estudiantes estudiante; Estudiantes.getEstudiantesCarnets().values() ; 1);
                                                           ^
  symbol:   variable Estudiantes
  location: class Universidad
./Tarea_3/Universidad.java:89: error: cannot find symbol
        for(Estudiantes estudiante: Estudiantes.getEstudiantesCarnets().values()){
                                    ^
  symbol:   variable Estudiantes
  location: class Universidad
./Tarea_3/Universidad.java:89: error: cannot find symbol
        for(Estudiantes estudiante: Estudiantes.getEstudiantesCarnets().values()){
            ^
  symbol:   class Estudiantes
  location: class Universidad
16 errors
5 warnings
